# doctl-eval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  INTERVIEW_PREP.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.do/: app.yaml
data/: ground_truth.json  issues.json  issues.sha256  sweep_results.json
data/sweep/: anthropic-claude-haiku-4.5.json  deepseek-r1-distill-llama-70b.json  llama3.3-70b-instruct.json  openai-gpt-oss-120b.json  openai-gpt-oss-20b.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfusionMatrix.tsx  MetricsPanel.tsx  RecommendationBanner.tsx  ScoredView.tsx  SweepOverview.tsx  UnscoredView.tsx
prompts/: classify_v1.txt
scripts/: run_sweep.py  verify_models.py
src/: config.py  models.py
src/api/: app.py
src/ground_truth/: builder.py
src/inference/: client.py  prompt.py  runner.py
src/ingestion/: github.py
src/scoring/: metrics.py
tests/: test_cost_calc.py  test_ground_truth.py  test_metrics.py
