[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctl-eval"
version = "0.1.0"
description = "LLM evaluation harness for GitHub issue classification"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity>=8.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "numpy>=1.26",
    "scipy>=1.13",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff.lint]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B"]
ignore = [
    "B008",   # function call in default argument
    "E501",   # line too long — handled where needed, not globally enforced
    "N806",   # variable in function should be lowercase (used for constant-like sets)
    "E741",   # ambiguous variable name (used in list comprehensions)
    "B904",   # raise from err — applied where context is clear
    "B905",   # zip without strict — legacy code
]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
